Added status flags.

--- a/index.html
+++ b/index.html
@@ -17,22 +17,34 @@
     </tr>
     <tr>
       <td>New York</td>
-      <td>New York</td>
+      <td>
+        <img src="https://cdn.britannica.com/14/3014-004-BD154711/flag-New-York-color-uniforms-facings-American-1909.jpg" alt="New York" width="50" height="20">
+        New York
+      </td>
       <td>8,622,698</td>
     </tr>
     <tr>
       <td>Los Angeles</td>
-      <td>California</td>
+      <td>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/0/01/Flag_of_California.svg" alt="New York" width="50" height="20">
+        California
+      </td>
       <td>3,999,759</td>
     </tr>
     <tr>
       <td>Chicago</td>
-      <td>Illinois</td>
+      <td>
+        <img src="https://cdn.britannica.com/94/1494-004-D676DAA0/prizewinner-state-flag-Illinois-design-emblem-competition-1969.jpg" alt="New York" width="50" height="20">
+        Illinois
+      </td>
       <td>2,716,450</td>
     </tr>
     <tr>
       <td>Houston</td>
-      <td>Texas</td>
+      <td>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f7/Flag_of_Texas.svg/800px-Flag_of_Texas.svg.png?20211128154336" alt="New York" width="50" height="20">
+        Texas
+      </td>
       <td>2,312,717</td>
     </tr>
   </table>
